add buttons now only allow one form to be presented at a time

--- a/client/src/app/all-items/all-items.component.html
+++ b/client/src/app/all-items/all-items.component.html
@@ -1,73 +1,101 @@
-<div><h2>All Items</h2>
-<div class="notebook">
-
-<div class="allCards">
-  
-  <div class="card-contents" *ngFor="let item of items$ | async">
-    <div class="card-contents-item">
-     <b>{{ item.item }}</b> 
-    </div>
-
-    <div class="card-contents-inStock">
-      {{ item.inStock === 0 ? "Out of Stock" : item.inStock }}
-    </div>
-
-    <div class="button-container">
-      <button color="primary" mat-mini-fab>
-        <mat-icon fontIcon="mode" />
-      </button>
-      <button color="warn" mat-mini-fab (click)="deleteItem(item._id)">
-        <mat-icon fontIcon="delete" />
-      </button>
-    </div>
+<div>
+  <h2>All Items</h2>
+  <div class="all-chips">
+    <mat-chip-listbox aria-label="search">
+      <mat-chip-option color="accent" selected>Store</mat-chip-option>
+      <mat-chip-option selected>Out of Stock</mat-chip-option>
+    </mat-chip-listbox>
   </div>
+  <div class="notebook">
+    <div class="allCards">
+      <div class="card-contents" *ngFor="let item of items$ | async">
+        <div class="card-contents-item">
+          <b>{{ item.item }}</b>
+        </div>
 
-  <div class="add-button">
-    <button  mat-fab [color]="isAdding? 'warn':'primary'" (click)="toggle()">
-     <mat-icon>{{isAdding?'clear':'add'}}</mat-icon>
-    </button>
-  </div>
+        <div class="card-contents-inStock">
+          {{ item.inStock === 0 ? "Out of Stock" : item.inStock }}
+        </div>
 
-  <div *ngIf="isAdding">
-    
-    <form class="item-form" [formGroup]="itemForm" (ngSubmit)="submitForm()">
-      <div class="alert alert-danger" *ngIf="displayError">
-      Input Required
+        <div class="button-container">
+          <button color="primary" mat-mini-fab>
+            <mat-icon fontIcon="mode" />
+          </button>
+          <button color="warn" mat-mini-fab (click)="deleteItem(item._id)">
+            <mat-icon fontIcon="delete" />
+          </button>
+        </div>
+      </div>
+
+      <div class="add-button">
+        <button
+          mat-fab
+          [color]="isAdding ? 'warn' : 'primary'"
+          (click)="toggle()"
+        >
+          <mat-icon>{{ isAdding ? "clear" : "add" }}</mat-icon>
+        </button>
+      </div>
+
+      <div *ngIf="isAdding">
+        <form
+          class="item-form"
+          [formGroup]="itemForm"
+          (ngSubmit)="submitForm()"
+        >
+          <div class="alert alert-danger" *ngIf="displayError">
+            Input Required
+          </div>
+          <mat-form-field>
+            <mat-label for="item"><strong>Item Name</strong></mat-label>
+            <input
+              matInput
+              type="text"
+              id="item"
+              name="item"
+              formControlName="item"
+              required
+            />
+          </mat-form-field>
+
+          <mat-form-field>
+            <mat-select id="frequency" formControlName="frequency" required>
+              <mat-option value="One-Time Request">One-Time Request</mat-option>
+              <mat-option value="Weekly">Weekly</mat-option>
+              <mat-option value="Monthly">Monthly</mat-option>
+              <mat-option value="Indefinite">Indefinite</mat-option>
+            </mat-select>
+            <mat-label> <strong> Frequency</strong> </mat-label>
+          </mat-form-field>
+
+          <mat-form-field>
+            <mat-label for="inStock">In Stock</mat-label>
+            <input
+              matInput
+              type="number"
+              id="inStock"
+              name="inStock"
+              formControlName="inStock"
+            />
+          </mat-form-field>
+
+          <mat-form-field>
+            <mat-select id="store" name="store" formControlName="store">
+              <mat-option value="Aldi">Aldi</mat-option>
+              <mat-option value="Jewel Osco">Jewel Osco</mat-option>
+              <mat-option value="Pete's Fresh Market"
+                >Pete's Fresh Market</mat-option
+              >
+              <mat-option value="Online">Online</mat-option>
+            </mat-select>
+            <mat-label>Store </mat-label>
+          </mat-form-field>
+
+          <button mat-raised-button color="primary" type="submit">
+            Submit
+          </button>
+        </form>
+      </div>
     </div>
-      <mat-form-field>
-        <mat-label for="item"><strong>Item Name</strong></mat-label>
-        <input matInput type="text" id="item" name="item" formControlName="item" required />
-      </mat-form-field>
-    
-      <mat-form-field>
-        <mat-select id="frequency" formControlName="frequency" required>
-          <mat-option value="One-Time Request">One-Time Request</mat-option>
-          <mat-option value="Weekly">Weekly</mat-option>
-          <mat-option value="Monthly">Monthly</mat-option>
-          <mat-option value="Indefinite">Indefinite</mat-option>
-        </mat-select>
-        <mat-label> <strong> Frequency</strong> </mat-label>
-      </mat-form-field>
-    
-    <mat-form-field>
-        <mat-label for="inStock">In Stock</mat-label>
-        <input matInput type="number" id="inStock" name="inStock" formControlName="inStock"/>
-    </mat-form-field>
-    
-      <mat-form-field>
-        <mat-select id="store" name="store" formControlName="store">
-          <mat-option value="Aldi">Aldi</mat-option>
-          <mat-option value="Jewel Osco">Jewel Osco</mat-option>
-          <mat-option value="Pete's Fresh Market">Pete's Fresh Market</mat-option>
-          <mat-option value="Online">Online</mat-option>
-        </mat-select>
-        <mat-label>Store </mat-label>
-      </mat-form-field>
-    
-      <button mat-raised-button color="primary" type="submit" >Submit</button>
-    
-    </form>
   </div>
 </div>
-
-</div></div>
