--- a/client/src/app/all-items/all-items.component.html
+++ b/client/src/app/all-items/all-items.component.html
@@ -2,8 +2,11 @@
   <h2>All Items</h2>
   <div class="all-chips">
     <mat-chip-listbox aria-label="search">
-      <mat-chip-option color="accent" selected>Store</mat-chip-option>
-      <mat-chip-option selected>Out of Stock</mat-chip-option>
+      <mat-chip-option unselected>Out of Stock</mat-chip-option>
+      <mat-chip-option unselected>Aldi</mat-chip-option>
+      <mat-chip-option unselected>Jewel Osco</mat-chip-option>
+      <mat-chip-option unselected>Pete's Fresh Market</mat-chip-option>
+      <mat-chip-option unselected>Online</mat-chip-option>
     </mat-chip-listbox>
   </div>
   <div class="notebook">
