--- a/client/src/app/all-items/all-items.component.html
+++ b/client/src/app/all-items/all-items.component.html
@@ -1,4 +1,5 @@
 <div>
+  <div class="alert alert-danger" *ngIf="displayEditError">Input Required</div>
   <h2>All Items</h2>
   <div class="all-chips">
     <mat-chip-listbox aria-label="search">
@@ -12,17 +13,74 @@
   <div class="notebook">
     <div class="allCards">
       <div class="card-contents" *ngFor="let item of items$ | async">
-        <div class="card-contents-item">
+
+
+        <div *ngIf="item.editing" class="edit-form">
+          <button mat-mini-fab color="warn" (click)="item.editing = false">
+            <mat-icon fontIcon="clear" />
+          </button>
+          <form [formGroup]="editForm" (ngSubmit)="submitEdit(this.item._id)">
+            <button mat-mini-fab color="primary" type="submit">
+              <mat-icon fontIcon="done"></mat-icon>
+            </button>
+            <input
+              class="edit-input"
+              type="text"
+              id="item"
+              name="item"
+              [(ngModel)]="item.item"
+              formControlName="item"
+              required
+            />
+
+            <input
+              class="edit-stock"
+              id="inStock"
+              name="inStock"
+              type="number"
+              [(ngModel)]="item.inStock"
+              formControlName="inStock"
+            />
+            <select
+              class="edit-frequency"
+              id="frequency"
+              name="frequency"
+              [(ngModel)]="item.frequency"
+              formControlName="frequency"
+              required
+            >
+              <option value="One-Time Request">One-Time Request</option>
+              <option value="Monthly">Monthly</option>
+              <option value="Weekly">Weekly</option>
+              <option value="Indefinite">Idefinite</option>
+            </select>
+            <select
+              class="edit-store"
+              id="store"
+              name="store"
+              [(ngModel)]="item.store"
+              formControlName="store"
+            >
+              <option value="Aldi">Aldi</option>
+              <option value="Jewel Osco">Jewel Osco</option>
+              <option value="Pete's Fresh Market">Pete's Fresh Market</option>
+              <option value="Online">Online</option>
+            </select>
+          </form>
+        </div>
+
+
+        <div *ngIf="!item.editing" class="card-contents-item">
           <b>{{ item.item }}</b>
         </div>
 
-        <div class="card-contents-inStock">
+        <div *ngIf="!item.editing" class="card-contents-inStock">
           {{ item.inStock === 0 ? "Out of Stock" : item.inStock }}
         </div>
 
-        <div class="button-container">
-          <button color="primary" mat-mini-fab>
-            <mat-icon fontIcon="mode" />
+        <div *ngIf="!item.editing" class="button-container">
+          <button color="primary" (click)="item.editing = true" mat-mini-fab>
+            <mat-icon>mode</mat-icon>
           </button>
           <button color="warn" mat-mini-fab (click)="deleteItem(item._id)">
             <mat-icon fontIcon="delete" />
