--- a/client/src/app/all-items/all-items.component.css
+++ b/client/src/app/all-items/all-items.component.css
@@ -36,6 +36,7 @@ h2 {
 .edit-form{
   display: flex;
   flex-direction: row;
+  justify-content: space-evenly;
 }
 .card-contents {
   display: flex;
