--- a/client/src/app/all-items/all-items.component.html
+++ b/client/src/app/all-items/all-items.component.html
@@ -14,9 +14,8 @@
     <div class="allCards">
       <div class="card-contents" *ngFor="let item of items$ | async">
 
-
         <div *ngIf="item.editing" class="edit-form">
-          <button mat-mini-fab color="warn" (click)="item.editing = false">
+          <button mat-mini-fab color="warn" (click)="ngOnInit()">
             <mat-icon fontIcon="clear" />
           </button>
           <form [formGroup]="editForm" (ngSubmit)="submitEdit(this.item._id)">
@@ -32,7 +31,6 @@
               formControlName="item"
               required
             />
-
             <input
               class="edit-stock"
               id="inStock"
@@ -69,7 +67,6 @@
           </form>
         </div>
 
-
         <div *ngIf="!item.editing" class="card-contents-item">
           <b>{{ item.item }}</b>
         </div>
@@ -86,6 +83,7 @@
             <mat-icon fontIcon="delete" />
           </button>
         </div>
+
       </div>
 
       <div class="add-button">
@@ -152,7 +150,7 @@
             <mat-label>Store </mat-label>
           </mat-form-field>
 
-          <button mat-raised-button color="primary" type="submit">
+          <button mat-raised-button color="primary" [disabled]="!itemForm.valid" type="submit">
             Submit
           </button>
         </form>
