--- a/client/src/app/groceries-list/groceries-list.component.css
+++ b/client/src/app/groceries-list/groceries-list.component.css
@@ -92,6 +92,25 @@
   height:100%;
 }
 
+.edit-form {
+  display: flex;
+  flex-direction: row;
+  margin: 0 0 0 -1em;
+}
+
+.edit-one-stock {
+  border:none;
+  width:18%;
+  background-color: rgb(255, 255, 191);
+}
+
+.edit-one-store,
+.edit-one-item {
+  border:none;
+  width:25%;
+  background-color: rgb(255, 255, 191);
+}
+
 .post-it {
   background-color: rgb(253, 253, 138);
   color: rgb(100, 100, 3);
@@ -116,8 +135,6 @@
   height: 50%;
   padding: 0px 10px 10px 10px;
 }
-
-
 
 .monthlyStock,
 .monthlyStore,
